adjust style for fixed position on safari

--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -127,22 +127,12 @@
 .showNavMobile {
   @apply flex;
   @apply flex-col;
-  @apply absolute;
+  @apply bg-white;
   width: 100%;
   height: 100%;
   z-index: 999;
   top: 0;
   left: 0;
-  @screen lg {
-    padding: 20px 15px;
-    @apply relative;
-    @apply flex-row;
-    @apply justify-end;
-    flex: 0;
-    width: auto;
-    height: auto !important;
-    z-index: auto;
-  }
 }
 
 /* FOOTER */
